<resources>
    <string name="app_name">QR_Test</string>
    <string name="this_action_maybe_contains_ads">This action maybe contains ads</string>
    <string name="qr_code_scanner">QR Code Scanner</string>
    <string name="language">Languages</string>
    <string name="vietnam">Vietnam</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="qr_and_barcode_scanner"><![CDATA[QR & Barcode Scanner]]></string>
    <string name="scan_unlimited_qr_codes_and_barcodes_exactly">Scan unlimited QR codes and barcodes exactly!</string>
    <string name="default_intro_title"><![CDATA[QR & Barcode Scanner]]></string>
    <string name="default_description_intro">Scan unlimited QR codes and barcodes exactly!</string>
    <string name="second_intro_title">Ceate QR Code</string>
    <string name="third_intro_title">Customize Style QR</string>
    <string name="second_description_intro">Support for links, business card, wifi, event,....</string>
    <string name="third_description_intro">Style your QR codes to suit your needs.</string>
    <string name="next_intro">Next</string>
    <string name="start_intro">Start</string>
    <string name="ic_menu_scan">Scan</string>
    <string name="ic_menu_create">Create</string>
    <string name="ic_menu_history">History</string>
    <string name="ic_menu_settings">Settings</string>
    <string name="scan_single">Scan</string>
    <string name="scan_batch">Batch</string>
    <string name="content_header_scan_result">Scan Result</string>
    <string name="please_enter_event_title">Please enter event title</string>
    <string name="title">Title</string>
    <string name="all_day">All day</string>
    <string name="start">Start</string>
    <string name="mar_13_2024_14_00">Mar 13, 2024 14:00</string>
    <string name="end">End</string>
    <string name="please_fill_in_the_content">Please fill in the content</string>
    <string name="create">Create</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="phone_number">Phone number</string>
    <string name="please_enter_your_phone_number">Please enter your phone number</string>
    <string name="e_mail">Email</string>
    <string name="please_enter_your_mail">Please enter your mail</string>
    <string name="address">Address</string>
    <string name="please_enter_your_address">Please enter your address</string>
    <string name="birthday">Birthday</string>
    <string name="company">Company</string>
    <string name="please_enter_your_company_address">Please enter your company address</string>
    <string name="description">Description</string>
    <string name="please_enter_something">Please enter something</string>
    <string name="name">Name</string>
    <string name="please_fill_in_the_contact_name">Please fill in the contact name</string>
    <string name="please_fill_in_the_phone_number">Please fill in the phone number</string>
    <string name="email_address">Email address</string>
    <string name="please_fill_in_the_email">Please fill in the email</string>
    <string name="subject">Subject</string>
    <string name="please_fill_in_the_subject">Please fill in the subject</string>
    <string name="message">Message</string>
    <string name="please_input_email_content">Please input email content</string>
    <string name="facebook_id">Facebook ID</string>
    <string name="url">URL</string>
    <string name="content">Content</string>
    <string name="enter_facebook_id">Enter facebook ID</string>
    <string name="instagram_id">Instagram ID</string>
    <string name="recipient_number">Recipient Number</string>
    <string name="please_fill_in_the_recipient_number">Please fill in the recipient number</string>
    <string name="please_input_message_content">Please input message content</string>
    <string name="spotify_id">Spotify ID</string>
    <string name="my_card">My Card</string>
    <string name="enter_spotify_id">Enter Spotify ID</string>
    <string name="telegram_id">Telegram ID</string>
    <string name="enter_telegram_id">Enter Telegram ID</string>
    <string name="tiktok_id">Tiktok ID</string>
    <string name="enter_tiktok_id">Enter Tiktok ID</string>
    <string name="enter_twitter_id">Enter Twitter ID</string>
    <string name="link">Link</string>
    <string name="example_https_qrcode_com">Example: hhtps://qrcode.com</string>
    <string name="username">Username</string>
    <string name="_888">+888</string>
    <string name="others_can_contact_you_directly_on_whatsapp_by_scanning_the_qr_code_you_create">Others can contact you directly on WhatsApp by scanning the QR code you create.</string>
    <string name="website">Website</string>
    <string name="select_area_code">Select Area Code</string>
    <string name="network_name">Network name</string>
    <string name="please_fill_in_the_ssid">Please fill in the SSID</string>
    <string name="security_mode">Security mode</string>
    <string name="wpa_wpa2">WPA/WPA2</string>
    <string name="none">None</string>
    <string name="wep">WEP</string>
    <string name="password">Password</string>
    <string name="please_fill_in_the_password">Please fill in the password</string>
    <string name="youtube_id">Youtube ID</string>
    <string name="enter_youtube_id">Enter Youtube ID</string>
    <string name="result">Result</string>
    <string name="done">Done</string>
    <string name="http_mvot_vn_qrcode">http://mvot.vn/qrcode</string>
    <string name="edit_style">Edit Style</string>
    <string name="share">Share</string>
    <string name="share_qr">Share QR</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="feedback">Feedback</string>
    <string name="tell_us_what_to_improve">Tell us what to improve</string>
    <string name="version">Version</string>
    <string name="version_number">1.1.1</string>
    <string name="defaultt">Default</string>
    <string name="advance">Advance</string>
    <string name="beep">Beep</string>
    <string name="when_the_scan_is_successful">When the scan is successful</string>
    <string name="vibrate">Vibrate</string>
    <string name="all_photos">All photos</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="utilities">Utilities</string>
    <string name="tiktok">Tiktok</string>
    <string name="telegram">Telegram</string>
    <string name="youtube">Youtube</string>
    <string name="spotify">Spotify</string>
    <string name="profile">Profile</string>
    <string name="contact">Contact</string>
    <string name="email">Email</string>
    <string name="telephone">Telephone</string>
    <string name="wifi">Wifi</string>
    <string name="map">Map</string>
    <string name="calendar">Calendar</string>
    <string name="text">Text</string>
    <string name="history">History</string>
    <string name="no_history">No history</string>
    <string name="scan_now">SCAN NOW</string>
    <string name="create_now">CREATE NOW</string>
    <string name="create_qr">Create QR</string>
    <string name="tel">Tel</string>
    <string name="to">To</string>
    <string name="security">Security</string>
    <string name="note">Note</string>
    <string name="scan">Scan</string>
</resources>