<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.create_qr.utilities.CreateQrWifiFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/createQRIconType"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:src="@drawable/ic_category_wifi"
                android:layout_marginVertical="24dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical"
                android:layout_marginVertical="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/network_name"
                    android:fontFamily="@font/inter_semibold"
                    android:textSize="14sp"
                    android:textColor="@color/neutral_1"
                    android:layout_marginBottom="8dp"/>
                <EditText
                    android:id="@+id/createQRWifiName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/please_fill_in_the_ssid"
                    android:background="@drawable/edit_text_rounded"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="14dp"
                    android:textColorHint="@color/neutral_3"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="14sp"
                    android:textColor="@color/neutral_1"
                    android:textCursorDrawable="@drawable/color_cursor"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/security_mode"
                android:fontFamily="@font/inter_semibold"
                android:textSize="14sp"
                android:textColor="@color/neutral_1"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:background="@drawable/primary_button_r16_bg_white">
                <TextView
                    android:id="@+id/createQRWifiType1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/wpa_wpa2"
                    android:paddingVertical="12dp"
                    android:background="@drawable/primary_button_r32"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/inter_semibold"/>
                <TextView
                    android:id="@+id/createQRWifiType2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/wep"
                    android:paddingVertical="12dp"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textColor="@color/neutral_1"
                    android:fontFamily="@font/inter_semibold"/>
                <TextView
                    android:id="@+id/createQRWifiType3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/none"
                    android:paddingVertical="12dp"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textColor="@color/neutral_1"
                    android:fontFamily="@font/inter_semibold"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical"
                android:layout_marginVertical="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:fontFamily="@font/inter_semibold"
                    android:textSize="14sp"
                    android:textColor="@color/neutral_1"
                    android:layout_marginBottom="8dp"/>
                <EditText
                    android:id="@+id/createQRWifiPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/please_fill_in_the_password"
                    android:background="@drawable/edit_text_rounded"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="14dp"
                    android:textColorHint="@color/neutral_3"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="14sp"
                    android:textColor="@color/neutral_1"
                    android:textCursorDrawable="@drawable/color_cursor"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/createQRWifiCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textAlignment="center"
        android:layout_marginBottom="72dp"
        android:layout_marginHorizontal="16dp"
        android:paddingVertical="12dp"
        android:fontFamily="@font/inter_extrabold"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:background="@drawable/primary_button_r32_primary_disable"/>

</LinearLayout>