<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".presentation.create_qr.business.CreateQrBusCardFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/createQRIconType"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:src="@drawable/ic_category_card"
                android:layout_marginVertical="24dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical"
                android:layout_marginBottom="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Name"
                    android:fontFamily="@font/inter_semibold"
                    android:textSize="14sp"
                    android:textColor="@color/neutral_1"
                    android:layout_marginBottom="8dp"/>
                <EditText
                    android:id="@+id/createQRBCardName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/please_enter_your_name"
                    android:background="@drawable/edit_text_rounded"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="14dp"
                    android:textColorHint="@color/neutral_3"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="14sp"
                    android:textColor="@color/neutral_1"
                    android:textCursorDrawable="@drawable/color_cursor"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical"
                android:layout_marginBottom="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:fontFamily="@font/inter_semibold"
                    android:textSize="14sp"
                    android:textColor="@color/neutral_1"
                    android:layout_marginBottom="8dp"/>
                <EditText
                    android:id="@+id/createQRBCardPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/please_enter_your_phone_number"
                    android:background="@drawable/edit_text_rounded"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="14dp"
                    android:textColorHint="@color/neutral_3"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="14sp"
                    android:inputType="number"
                    android:textColor="@color/neutral_1"
                    android:textCursorDrawable="@drawable/color_cursor"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical"
                android:layout_marginBottom="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/e_mail"
                    android:fontFamily="@font/inter_semibold"
                    android:textSize="14sp"
                    android:textColor="@color/neutral_1"
                    android:layout_marginBottom="8dp"/>
                <EditText
                    android:id="@+id/createQRBCardMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/please_enter_your_mail"
                    android:background="@drawable/edit_text_rounded"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="14dp"
                    android:textColorHint="@color/neutral_3"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="14sp"
                    android:textColor="@color/neutral_1"
                    android:textCursorDrawable="@drawable/color_cursor"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical"
                android:layout_marginBottom="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:fontFamily="@font/inter_semibold"
                    android:textSize="14sp"
                    android:textColor="@color/neutral_1"
                    android:layout_marginBottom="8dp"/>
                <EditText
                    android:id="@+id/createQRBCardAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/please_enter_your_address"
                    android:background="@drawable/edit_text_rounded"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="14dp"
                    android:textColorHint="@color/neutral_3"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="14sp"
                    android:textColor="@color/neutral_1"
                    android:textCursorDrawable="@drawable/color_cursor"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical"
                android:layout_marginBottom="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/birthday"
                    android:fontFamily="@font/inter_semibold"
                    android:textSize="14sp"
                    android:textColor="@color/neutral_1"
                    android:layout_marginBottom="8dp"/>
                <EditText
                    android:id="@+id/createQRBCardBirthDay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:background="@drawable/edit_text_rounded"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="14dp"
                    android:textColorHint="@color/neutral_3"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="14sp"
                    android:textColor="@color/neutral_1"
                    android:focusable="false"
                    android:focusableInTouchMode="true"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical"
                android:layout_marginBottom="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/company"
                    android:fontFamily="@font/inter_semibold"
                    android:textSize="14sp"
                    android:textColor="@color/neutral_1"
                    android:layout_marginBottom="8dp"/>
                <EditText
                    android:id="@+id/createQRBCardCompany"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/please_enter_your_company_address"
                    android:background="@drawable/edit_text_rounded"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="14dp"
                    android:textColorHint="@color/neutral_3"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="14sp"
                    android:textColor="@color/neutral_1"
                    android:textCursorDrawable="@drawable/color_cursor"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical"
                android:layout_marginBottom="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:fontFamily="@font/inter_semibold"
                    android:textSize="14sp"
                    android:textColor="@color/neutral_1"
                    android:layout_marginBottom="8dp"/>
                <EditText
                    android:id="@+id/createQRBCardDes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="96dp"
                    android:hint="@string/please_enter_something"
                    android:background="@drawable/edit_text_rounded"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="14dp"
                    android:textColorHint="@color/neutral_3"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="14sp"
                    android:textColor="@color/neutral_1"
                    android:singleLine="false"
                    android:inputType="textMultiLine"
                    android:isScrollContainer="true"
                    android:maxLength="2000"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:maxLines="4"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/createQRBCardCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textAlignment="center"
        android:layout_marginBottom="72dp"
        android:layout_marginHorizontal="16dp"
        android:paddingVertical="12dp"
        android:fontFamily="@font/inter_extrabold"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:background="@drawable/primary_button_r32_primary_disable"/>

</LinearLayout>