<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.create_qr.social.CreateQrWhatsAppFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/createQRIconType"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:src="@drawable/ic_category_whatsapp"
                android:layout_marginVertical="24dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical"
                android:layout_marginBottom="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:fontFamily="@font/inter_semibold"
                    android:textSize="14sp"
                    android:textColor="@color/neutral_1"
                    android:layout_marginBottom="8dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/createQRWhatsAppPhoneAreaCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_888"
                        android:textColor="@color/primary"
                        android:fontFamily="@font/inter_medium"
                        android:textSize="14sp"
                        android:background="@drawable/primary_button_r16_primary_disable"
                        android:paddingVertical="14dp"
                        android:paddingHorizontal="16dp"
                        android:layout_marginEnd="8dp"/>
                    <EditText
                        android:id="@+id/createQRWhatsAppPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        android:background="@drawable/edit_text_rounded"
                        android:paddingHorizontal="16dp"
                        android:paddingVertical="14dp"
                        android:textColorHint="@color/neutral_3"
                        android:fontFamily="@font/inter_medium"
                        android:textSize="14sp"
                        android:inputType="phone"
                        android:textColor="@color/neutral_1"
                        android:textCursorDrawable="@drawable/color_cursor"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/others_can_contact_you_directly_on_whatsapp_by_scanning_the_qr_code_you_create"
                    android:textSize="12sp"
                    android:textColor="@color/neutral_2"
                    android:paddingTop="16dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/createQRWhatsAppCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textAlignment="center"
        android:layout_marginBottom="72dp"
        android:layout_marginHorizontal="16dp"
        android:paddingVertical="12dp"
        android:fontFamily="@font/inter_extrabold"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:background="@drawable/primary_button_r32_primary_disable"/>


</LinearLayout>