<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.create_qr.social.CreateQrSpotifyFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/createQRIconType"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:src="@drawable/ic_category_spotify"
                android:layout_marginVertical="24dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:background="@drawable/primary_button_r16_bg_white">
                <TextView
                    android:id="@+id/createQRFacebookIDButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/spotify_id"
                    android:paddingVertical="12dp"
                    android:background="@drawable/primary_button_r32"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/inter_semibold"/>
                <TextView
                    android:id="@+id/createQRFacebookURLButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/url"
                    android:paddingVertical="12dp"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textColor="@color/neutral_1"
                    android:fontFamily="@font/inter_semibold"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical"
                android:layout_marginVertical="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/content"
                    android:fontFamily="@font/inter_semibold"
                    android:textSize="14sp"
                    android:textColor="@color/neutral_1"
                    android:layout_marginBottom="8dp"/>
                <EditText
                    android:id="@+id/createQRFacebookContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_spotify_id"
                    android:background="@drawable/edit_text_rounded"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="14dp"
                    android:textColorHint="@color/neutral_3"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="14sp"
                    android:textColor="@color/neutral_1"
                    android:textCursorDrawable="@drawable/color_cursor"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/createQRFacebookCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textAlignment="center"
        android:layout_marginBottom="72dp"
        android:layout_marginHorizontal="16dp"
        android:paddingVertical="12dp"
        android:fontFamily="@font/inter_extrabold"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:background="@drawable/primary_button_r32_primary_disable"/>

</LinearLayout>